# rule_engine_clips

./: CMakeLists.txt  README.md
src/clips/: factcom.cc  factrhs.cc
src/executables/: clips-test.cc
src/lib/: clips-factory.cc  clips-factory.h  clips-utils.cc  clips-utils.h  json-utils.cc  json-utils.h  resource-pool.hpp  traits-helper.h
